# gparchitect

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: architecture-focus.agent.md  planning-orchestrator.agent.md  prior_knowledge.agent.md
.github/workflows/: pytest.yml
benchmark_v1/: __init__.py  analyze_results.py  registry.py  run_benchmark.py
benchmark_v1/baselines/: __init__.py  configs.py
benchmark_v1/datasets/: __init__.py  botorch_functions.py  synthetic.py
benchmark_v1/prompts/: __init__.py  variants.py
docs/: architecture_module_map.md  benchmark_v1.md  quickstart.md  testing_strategy.md
docs/notebooks/: nonstationary_changepoint_vs_matern.ipynb  nonstationary_input_warping_vs_matern.ipynb  nonstationary_time_varying_vs_matern.ipynb
results/benchmark_v1/: README.md
src/gparchitect/: __init__.py  api.py  cli.py
src/gparchitect/builders/: __init__.py  builder.py  changepoint_kernel.py  data.py  recency.py  time_varying_kernel.py
src/gparchitect/dsl/: __init__.py  compat.py  schema.py
src/gparchitect/examples/: __init__.py
src/gparchitect/fitting/: __init__.py  fitter.py
src/gparchitect/logging/: __init__.py  experiment_log.py
src/gparchitect/planning/: __init__.py  bridge.py  handoff.py  models.py  runtime.py
src/gparchitect/planning/knowledge/: gp_modeling_decision_system.yaml
src/gparchitect/revision/: __init__.py  revision.py
src/gparchitect/translator/: __init__.py  translator.py
src/gparchitect/validation/: __init__.py  validator.py
tests/: __init__.py  test_agents.py  test_api.py  test_benchmark_v1.py  test_builders.py  test_cli.py  test_dsl.py  test_fitting.py  test_logging.py  test_nonstationary.py  test_planning.py  test_planning_bridge.py  test_revision.py  test_translator.py  test_validation.py
tests/e2e/: test_instruction_contracts_e2e.py  test_kernel_examples_e2e.py  test_planning_orchestrator_e2e.py
tests/e2e/fixtures/: planning_orchestrator_prompts.json
