[tool.poetry]
name = "gparchitect"
version = "0.1.0"
description = "Build Gaussian Process models from natural-language instructions via a formal DSL using BoTorch and GPyTorch."
authors = ["GPArchitect Contributors"]
license = "MIT"
readme = "README.md"
packages = [{ include = "gparchitect", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.0"
torch = "^2.0"
botorch = "^0.11"
gpytorch = "^1.11"
pandas = "^2.0"
click = "^8.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"
ruff = "^0.4"

[tool.poetry.scripts]
gparchitect = "gparchitect.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 130
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
