[tool.poetry]
name = "gparchitect"
version = "0.1.0"
description = "Build Gaussian Process models from natural-language instructions via a formal DSL using BoTorch and GPyTorch."
authors = ["ethantenison <tenison.ethan@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "gparchitect", from = "src" }]

[tool.poetry.dependencies]
python = "3.13.12"
pydantic = "2.12.5"
torch = "2.11.0"
botorch = "0.17.2"
gpytorch = "1.15.2"
pandas = "^2.2.2"
click = "^8.1"

[tool.poetry.group.dev.dependencies]
pytest = "9.0.2"
pytest-cov = "7.0.0"
ruff = "0.15.4"
ipykernel = "^7.2.0"

[tool.poetry.scripts]
gparchitect = "gparchitect.cli:main"
gparchitect-plan = "gparchitect.planning.bridge:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
markers = [
	"e2e: end-to-end user-facing pipeline examples",
]
