[project]
name = "gparchitect"
version = "0.1.0"
description = "Build Gaussian Process models from natural-language instructions via a formal DSL using BoTorch and GPyTorch."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = "Apache-2.0"
authors = [{ name = "ethantenison", email = "tenison.ethan@gmail.com" }]
dependencies = [
    "pydantic>=2.7,<3",
    "torch>=2.4,<3",
    "botorch>=0.11,<1",
    "gpytorch>=1.11,<2",
    "pandas>=2.2,<3",
    "click>=8.1,<9",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.scripts]
gparchitect = "gparchitect.cli:main"
gparchitect-plan = "gparchitect.planning.bridge:main"

[tool.poetry]
packages = [{ include = "gparchitect", from = "src" }]

[tool.poetry.group.dev.dependencies]
pytest = "9.0.2"
pytest-cov = "7.0.0"
ruff = "0.15.4"
pre-commit = "^3.7"
ipykernel = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
markers = [
	"e2e: end-to-end user-facing pipeline examples",
]
